# citeck-claude-code-tools

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md
plugins/citeck/: .mcp.json  README.md  pyproject.toml
plugins/citeck/.claude-plugin/: plugin.json
plugins/citeck/agents/: citeck-explorer.md  citeck-manager.md
plugins/citeck/lib/: __init__.py  auth.py  config.py  pkce.py  rag_api.py  records_api.py
plugins/citeck/servers/: citeck_mcp.py
plugins/citeck/skills/_shared/: task-description-guide.md
plugins/citeck/skills/citeck-ask-docs/: SKILL.md
plugins/citeck/skills/citeck-auth/: SKILL.md
plugins/citeck/skills/citeck-auth/scripts/: setup.py  setup_pkce.py  switch_profile.py  test_connection.py
plugins/citeck/skills/citeck-changes-to-task/: SKILL.md
plugins/citeck/skills/citeck-changes-to-task-md/: SKILL.md
plugins/citeck/skills/citeck-changes-to-task/scripts/: create_from_taskmd.py
plugins/citeck/skills/citeck-records/: SKILL.md
plugins/citeck/skills/citeck-records-query/: SKILL.md
plugins/citeck/skills/citeck-tracker/: SKILL.md
plugins/citeck/tests/: test_auth.py  test_auth_skill.py  test_changes_to_task.py  test_config.py  test_mcp_create_issue.py  test_mcp_download_attachment.py  test_mcp_list_projects.py  test_mcp_metadata_queries.py  test_mcp_query_comments.py  test_mcp_records_mutate.py  test_mcp_records_query.py  test_mcp_search_docs.py  test_mcp_search_issues.py  test_mcp_server.py  test_mcp_test_connection.py  test_mcp_update_issue.py  test_pkce.py  test_rag_api.py  test_records_api.py  test_records_scripts.py  test_tracker.py
(+17 files in other folders)
