[project]
name = "citeck-claude-code-tools"
version = "3.0.0"
description = "MCP server for Citeck ECOS platform integration with Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
